--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Main"
+        		  android:launchMode="singleInstance"
         		  android:theme="@style/Theme.Transparent"
         		  android:screenOrientation="portrait"
                   android:label="@string/app_name">
